fixed contacts overflow problem

--- a/assets/sdeddens.css
+++ b/assets/sdeddens.css
@@ -12,6 +12,10 @@ body {
 	text-align: center;
 }
 
+#contacts {
+	overflow: hidden;
+}
+
 #linkedIn > img {
 	border: 0px;
 	position: absolute;
